# Embedding-Julia-Boilerpolate

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.common  Makefile.in  README.md  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  traces.0
include/: pocel.h
src/: Makefile  Makefile.am  Makefile.in  embed.c  pocel.c
src/.deps/: libpocel_la-pocel.Plo
test/: Makefile  Makefile.am  Makefile.in  julia_embedding.c  julia_embedding.h
test/.deps/: julia_embedding-julia_embedding.Po  julia_embedding-test_simple_jleval.Po  runtests-runtests.Po  runtests-test_simple_jleval.Po
